--- a/aboutUs.html
+++ b/aboutUs.html
@@ -98,7 +98,7 @@
                 <acticle class="card">
                   <div class="team-mem">
                     <img
-                      src="/assets/img/avaanaa.webp"
+                      src="assets/img/avaanaa.webp"
                       alt="avatar-of-Anna"
                       class="avatar"
                     />
@@ -113,7 +113,7 @@
                 <article class="card">
                   <div class="team-mem">
                     <img
-                      src="/assets/img/avadavid.jpg"
+                      src="assets/img/avadavid.jpg"
                       alt="avata-of-david"
                       class="avatar"
                     />
@@ -128,7 +128,7 @@
                 <acticle class="card">
                   <div class="team-mem">
                     <img
-                      src="/assets/img/avalinhpham.jpeg"
+                      src="assets/img/avalinhpham.jpeg"
                       alt="avatar-of-linhpham"
                       class="avatar"
                     />
