--- a/career.html
+++ b/career.html
@@ -30,17 +30,17 @@
       <div class="main-content">
         <div class="body">
           <!-- logo -->
-          <img src="/assets/img/logo.png" alt="Logo_Company" id="logo" />
+          <img src="assets/img/logo.png" alt="Logo_Company" id="logo" />
           <!-- nav -->
           <nav class="nav">
             <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="/aboutUs.html">About Us</a></li>
-              <li><a href="/information.html">Information</a></li>
-              <li><a href="/services.html">Services</a></li>
-              <li><a href="/resources.html">Resources</a></li>
-              <li class="active"><a href="/career.html">Career</a></li>
-              <li><a href="/contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutUs.html">About Us</a></li>
+              <li><a href="information.html">Information</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="resources.html">Resources</a></li>
+              <li class="active"><a href="career.html">Career</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
