--- a/information.html
+++ b/information.html
@@ -34,15 +34,15 @@
           <!-- nav -->
           <nav class="nav">
             <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="/aboutUs.html">About Us</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutUs.html">About Us</a></li>
               <li class="active">
-                <a href="/information.html">Information</a>
+                <a href="information.html">Information</a>
               </li>
-              <li><a href="/services.html">Services</a></li>
-              <li><a href="/resources.html">Resources</a></li>
-              <li><a href="/career.html">Career</a></li>
-              <li><a href="/contact.html">Contact</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="resources.html">Resources</a></li>
+              <li><a href="career.html">Career</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
@@ -82,7 +82,7 @@
                   controls
                 >
                   <source
-                    src="/assets/video/Nova_Design_Studio_Company_Introduction.mp4"
+                    src="assets/video/Nova_Design_Studio_Company_Introduction.mp4"
                     type="video/mp4"
                   />
                   Trình duyệt của bạn không hỗ trợ video.
