--- a/resources.html
+++ b/resources.html
@@ -34,13 +34,13 @@
           <!-- nav -->
           <nav class="nav">
             <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="/aboutUs.html">About Us</a></li>
-              <li><a href="/information.html">Information</a></li>
-              <li><a href="/services.html">Services</a></li>
-              <li class="active"><a href="/resources.html">Resources</a></li>
-              <li><a href="/career.html">Career</a></li>
-              <li><a href="/contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutUs.html">About Us</a></li>
+              <li><a href="information.html">Information</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li class="active"><a href="resources.html">Resources</a></li>
+              <li><a href="career.html">Career</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
