--- a/services.html
+++ b/services.html
@@ -30,17 +30,17 @@
       <div class="main-content">
         <div class="body">
           <!-- logo -->
-          <img src="/assets/img/logo.png" alt="Logo_Company" id="logo" />
+          <img src="assets/img/logo.png" alt="Logo_Company" id="logo" />
           <!-- nav -->
           <nav class="nav">
             <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="/aboutUs.html">About Us</a></li>
-              <li><a href="/information.html">Information</a></li>
-              <li class="active"><a href="/services.html">Services</a></li>
-              <li><a href="/resources.html">Resources</a></li>
-              <li><a href="/career.html">Career</a></li>
-              <li><a href="/contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutUs.html">About Us</a></li>
+              <li><a href="information.html">Information</a></li>
+              <li class="active"><a href="services.html">Services</a></li>
+              <li><a href="resources.html">Resources</a></li>
+              <li><a href="career.html">Career</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
@@ -169,12 +169,12 @@
 
                 <div class="cta-hero__actions">
                   <a
-                    href="/information.html"
+                    href="information.html"
                     target="_blank"
                     class="btn btn-primary"
                     >Contact Us</a
                   >
-                  <a href="/resources.html" class="btn btn-outline"
+                  <a href="resources.html" class="btn btn-outline"
                     >Learn More</a
                   >
                 </div>
