--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- deploy by github -->
+    <base href="/Assignment/" />
     <!-- reset css -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <!-- embed fonts -->
@@ -113,7 +115,7 @@
                 <article class="card">
                   <div class="team-mem">
                     <img
-                      src="assets/img/avadavid.jpg"
+                      src="/assets/img/avadavid.jpg"
                       alt="avata-of-david"
                       class="avatar"
                     />
