--- a/career.html
+++ b/career.html
@@ -36,7 +36,7 @@
           <nav class="nav">
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="aboutUs.html">About Us</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li><a href="information.html">Information</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="resources.html">Resources</a></li>
