--- a/information.html
+++ b/information.html
@@ -36,7 +36,7 @@
           <nav class="nav">
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="aboutUs.html">About Us</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li class="active">
                 <a href="information.html">Information</a>
               </li>
