--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
           <!-- nav -->
           <nav class="nav">
             <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li class="active"><a href="aboutUs.html">About Us</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li class="active"><a href="about.html">About Us</a></li>
               <li><a href="information.html">Information</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="resources.html">Resources</a></li>
@@ -113,7 +113,7 @@
                 <article class="card">
                   <div class="team-mem">
                     <img
-                      src="/assets/img/avadavid.jpg"
+                      src="assets/img/avadavid.jpg"
                       alt="avata-of-david"
                       class="avatar"
                     />
@@ -203,7 +203,7 @@
             <h4>Quick Links</h4>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="aboutUs.html">About Us</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li><a href="information.html">Information</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="resources.html">Resources</a></li>
