--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- reset css -->
-    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href=".assets/css/reset.css" />
     <!-- embed fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- style -->
-    <link rel="stylesheet" href="/assets/css/styleForm.css" />
+    <link rel="stylesheet" href="assets/css/styleForm.css" />
     <title>Nova Design - Contact</title>
   </head>
   <body>
@@ -165,7 +165,7 @@
             <h4>Quick Links</h4>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="aboutUs.html">About Us</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li><a href="information.html">Information</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="resources.html">Resources</a></li>
