--- a/resources.html
+++ b/resources.html
@@ -179,13 +179,13 @@
           <nav class="footer__links">
             <h4>Quick Links</h4>
             <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="/aboutUs.html">About Us</a></li>
-              <li><a href="/information.html">Information</a></li>
-              <li><a href="/services.html">Services</a></li>
-              <li><a href="/resources.html">Resources</a></li>
-              <li><a href="/career.html">Career Opportunities</a></li>
-              <li><a href="/contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="information.html">Information</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="resources.html">Resources</a></li>
+              <li><a href="career.html">Career Opportunities</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
 
