--- a/contact.html
+++ b/contact.html
@@ -279,6 +279,6 @@
         document.getElementById("y").textContent = new Date().getFullYear();
       </script>
     </footer>
-    <script src="/assets/js/javascript.js"></script>
+    <script src="assets/js/javascript.js"></script>
   </body>
 </html>
