emove / front link logo

--- a/information.html
+++ b/information.html
@@ -31,7 +31,7 @@
       <div class="main-content">
         <div class="body">
           <!-- logo -->
-          <img src="/assets/img/logo.png" alt="Logo_Company" id="logo" />
+          <img src="assets/img/logo.png" alt="Logo_Company" id="logo" />
           <!-- nav -->
           <nav class="nav">
             <ul>
